  - NEW: allow taggers to write pedigree files
  - NEW: introduce pedigreeParentsChooser to choose parents according to a given pedigree
  - NEW: introduce pedigreeMating to mate according to a given pedigree
  - NEW: add infoTagger, sexTagger, affectionTagger
  - NEW: add pedigree information handling functions

version 0.8.2 - (Rev 1370) Nov 19, 2007
  - BUG: Fix saveFstat in simuUtil.py
  - NEW/CHG: rewrite pyMating, which now accepts a parents chooser, and an offspring generator.
  - NEW: add heteroMating to allow allow different mating scheme used for different
		subpopulations, or proportions of individuals
  - NEW: add selfMating mating scheme.
  - NEW: add various parent choosers.
  - NEW: add various offspring generators.
  - NEW: add null, duplicate, info, genotype, proportion splitters
  - NEW: add splitter interface to populations.

version 0.8.1 - (Rev 1254) Oct 05, 2007
  - NEW: Allow len(pops) == 1 in MergePopulationsByLoci(pops) and
	MergePopulations(pops)
  - BUG: Use /dev/urandom for unix users. os.path.isfile('/dev/urandom') 
		returns false even if this file does exist.
  - BUG: Fix the handling of binary option in command line, and handling of short 
		arguments.
  - NEW: Use a checkbox for binary options in the parameter dialogs.
  - NEW: make use of second to last inforFields passed to pyPenetrance 
		and pySelector to pass specified information fields to user-defined
		functions.
  - BUG: Fix a few functions in hapMapUtil.py
  - BUG: stop displaying full path name in the title of the parameter dialog.
  - NEW: add chromName(), chromNames(), chromByName() to genotypic structure, and
		chromNames parameter to population constructor.
  - NEW: Some documentation improvement.


version 0.8.0 - (Rev 1215) Aug 14, 2007
  - Reference manual overhaul
  - Rename outputHelper to pyOutput, and alleleType to AlleleType for consistency.
  - NEW: Respect environmental variable GSL_RNG_TYPE for the choice of RNG

version 0.7.11 - (Rev 1133) July 26, 2007